--- a/TypeExtensionProjectionDemo.csproj
+++ b/TypeExtensionProjectionDemo.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.0-rc.2" />
-    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.0.0-rc.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.9" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.1.0-preview.1" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.1.0-preview.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0-rtm.21519.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0-rtm.21519.8" />
   </ItemGroup>
 
 </Project>
